--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,12 @@
 # Configuration file
 # key = value
+
+# datasource configuration
+quarkus.datasource.url = jdbc:derby://localhost:1527/derbydb
+quarkus.datasource.driver = org.apache.derby.jdbc.client
+quarkus.datasource.username = admin
+quarkus.datasource.password = passme
+
+# drop and create the database at startup (use `update` to only update the schema)
+quarkus.hibernate-orm.database.generation=drop-and-create
+
