--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,11 @@
 # Configuration file
 # key = value
 
+# Get this from https://quarkus.io/guides/hibernate-orm
+
 # datasource configuration
 quarkus.datasource.url = jdbc:derby://localhost:1527/derbydb
-quarkus.datasource.driver = org.apache.derby.jdbc.client
+quarkus.datasource.driver = org.apache.derby.jdbc.clientdriver
 quarkus.datasource.username = admin
 quarkus.datasource.password = passme
 
