Fix application.properties "datasource Error"

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@
 
 # datasource configuration
 quarkus.datasource.url = jdbc:derby://localhost:1527/derbydb
-quarkus.datasource.driver = org.apache.derby.jdbc.clientdriver
+quarkus.datasource.driver = org.apache.derby.jdbc.ClientDriver
 quarkus.datasource.username = admin
 quarkus.datasource.password = passme
 
